# uep-protocol

./: .gitignore  Makefile  NOTICE  README.en.md  README.md  pyproject.toml
docs/: a2-depth-2026-07.md  adaptation-plan.md  comparison-matrix-2026-07.md  conformance.en.md  conformance.zh.md  coverage-map.md  coverage-map.rows.json  coverage-map.seed.json  crossrunner-2026-07.md  retrospective-2026-07.md  scoring-closure-2026-07.md  swebench-harness.md  uep-v2-action-plan.md  uep-v2-goals.md  uep-v2-spec.en.md  uep-v2-spec.md  uep-v2-test-spec.md  validation-report-2026-07.en.md  validation-report-2026-07.md  zh-codegen-2026-07.md
examples/: quiz.csv
scripts/: build_t2r_pool.py  build_zh_codegen.py  census_render.py  census_seed.py  crossrunner_compare.py  crossrunner_extract.py  crossrunner_run.py  demo_gates.py  dogfood_codegen.py  dogfood_run.py  fetch_slices.py  fullscale_convert.py  inspect_codegen_task.py  inspect_crossrunner_task.py  retrieval_baseline.py  slices.lock.json  zh_codegen_problems.py
tests/: test_assemble_retrieval.py  test_check_patch.py  test_cli_conform.py  test_cli_convert.py  test_cli_export.py  test_cli_i18n.py  test_cli_validate.py  test_cli_verbs.py  test_crossrunner_compare.py  test_crossrunner_extract.py  test_crossrunner_parsers.py  test_export_inspect_ai.py  test_export_lmeval.py  test_extras_lint.py  test_fr_mapping.py  test_import_choices_real.py  test_import_codegen_real.py  test_import_custom_real.py  test_import_patch_real.py  test_import_retrieval_real.py  test_lang_normalization.py  test_manifest.py  test_mapping_tables.py  (+18 more)
(+118 files in other folders)
